# kyber.light

./: IntConstMult_13_7681.vhdl  Manifest.json  README.md  add_headers.py  add_sram_libs.sh  cmd_tester.py  coins.in.txt  cpa_gen_io.py  file_header.vhd  gen_fobos.py  kyber.xml  pdi.in.txt  pk.in.txt  polyvec_mac_tb.py  pt.in.txt  run.py  run_coco.py  sdi.in.txt
cocorun/: __init__.py  requirements.txt
cref/: Makefile  PQCgenKAT_encrypt.c  api.h  cbd.c  fips202.c  indcpa.c  indcpa.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  test_kyber.c
doc/: barrett.drawio  decompressor.drawio  drawio_to_pdf.py  keccak.xml  kyber.drawio  kyber.xml  ploymac.xml  polymac.drawio  polymac.xml  polymac_ok.drawio
mukeccak/: Cargo.toml  Manifest.json  controller.vhdl  datapath.vhdl  iota_lut.vhdl  keccak_controller.vhdl  keccak_core.vhdl  keccak_core_tb.py  keccak_core_tb.vhdl  keccak_tb.vhdl  rho_rom.vhdl  run.py  shift_reg.vhdl  slice_unit.vhdl  tests.py
mukeccak/tiny-keccak/: Cargo.toml  test_keccak_py.py
mukeccak/tiny-keccak/src/: lib.rs
plot/: extract_hier_table.py  plot.template.html  sunburst.js
pyber/: MANIFEST.in  __init__.py  build_pyber.py  pyber2.py  requirements.txt  setup.py
tiny_keccak/: PoC  keccak_controller.vhdl  keccak_core.vhdl  keccak_core_tb.py  keccak_datapath.vhdl  keccak_pkg.vhdl  rho_rom.vhdl  run.py  rust-toolchain  shift_reg.vhdl  slice_unit.vhdl
tiny_keccak/rust-model/: Cargo.toml  test_keccak_py.py
tiny_keccak/rust-model/src/: lib.rs
vhdl/: ConstMult_17473_15.vhdl  ConstMult_3329_10_22.vhdl  ConstMult_3329_12_12.vhdl  Makefile  cbd.vhdl  (+64 more)
(+103 files in other folders)
