[package]
description = "An implementation of the FIPS-202-defined SHA-3 and SHAKE functions."
name = "tiny-keccak"
version = '1.0.0'
authors = ['David Leon Gil', 'kamyar']

[dependencies.pyo3]
git = 'https://github.com/PyO3/pyo3'
features = ["extension-module"]

[dependencies]
crunchy = "0.2"
itertools = "0.8"

[profile.dev]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[profile.test]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

# [workspace]
# members = ["comparison"]

[lib]
name = "tiny_keccak"
crate-type = ["rlib", "cdylib"]
test = true
